# connect-4-engine

./: .gitignore  README.md  conftest.py  engine.py  play_game.py  pyproject.toml  requirements.txt  tournament_results.json
.github/workflows/: ci.yml
agents/: Sohams_secret_agent.py  base_agent.py  human_agent.py  hybrid_mcts_agent.py  mcts_agent.py  minimax_agent.py  random_agent.py  rl_agent.py  rl_policy_agent.py  rule_based_agent.py
connect4/: __main__.py  engine.py  tactics.py
connect4/agents/: __init__.py  base.py  factory.py  mcts.py  minimax.py  random.py  rl_policy.py  rule_based.py
connect4/cli/: game.py  main.py  train.py
connect4/evaluation/: tournament.py
connect4/models/: __init__.py
connect4/training/: trainer.py  (+1 more)
docs/: 01-overview.md  02-commands.md  03-file-structure.md  04-architecture.md  06-training.md  07-results.md  08-future-work.md  README.md  architecture.md  future-work.md  overview.md
evaluation/: evaluate.py
models/: policy_value_network.py  value_network.py
results/: mcts_vs_minimax_part1_mcts700_vs_depths.json  mcts_vs_minimax_part2_mcts_scaling_vs_mm7.json  mcts_vs_minimax_part3_mcts700_vs_mm7_extended.json  mcts_vs_minimax_part4_mcts200_vs_depths.json
scripts/: run.py  run_evaluation.py  run_game_cli.py  run_game_ui.py  run_mcts_vs_minimax.py  run_tournament.py
tests/: conftest.py  test_agents.py  test_cli.py  test_engine.py  test_evaluate.py  test_network.py  test_tactics.py  test_vec_engine.py
training/: evaluate.py  plot_results.py  self_play.py  tournament.py  train_policy_rl.py  train_rl.py
ui/: game_ui.py
(+50 files in other folders)
